--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,6 +64,7 @@ before_script:
 
 # Check linting
 lintDebug:
+only: [merge_requests]
   interruptible: true
   stage: build
   script:
@@ -71,6 +72,7 @@ lintDebug:
     
 # Make Project
 assembleDebug:
+only: [merge_requests]
   interruptible: true
   stage: build
   script:
@@ -83,6 +85,7 @@ assembleDebug:
 
 # Run all tests, if any fails, interrupt the pipeline(fail it)
 debugTests:
+only: [merge_requests]
   interruptible: true
   stage: test
   script:
@@ -90,6 +93,7 @@ debugTests:
 
 # Deployment to appetize.io, go through readme for more info
 deploy:
+only: [merge_requests]
   interruptible: true
   stage: deploy
   dependencies:
