--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -64,7 +64,8 @@ before_script:
 
 # Check linting
 lintDebug:
-only: [merge_requests]
+ only: 
+ - [merge_requests]
   interruptible: true
   stage: build
   script:
@@ -72,7 +73,8 @@ only: [merge_requests]
     
 # Make Project
 assembleDebug:
-only: [merge_requests]
+ only: 
+ - [merge_requests]
   interruptible: true
   stage: build
   script:
@@ -85,7 +87,8 @@ only: [merge_requests]
 
 # Run all tests, if any fails, interrupt the pipeline(fail it)
 debugTests:
-only: [merge_requests]
+ only: 
+ - [merge_requests]
   interruptible: true
   stage: test
   script:
@@ -93,7 +96,8 @@ only: [merge_requests]
 
 # Deployment to appetize.io, go through readme for more info
 deploy:
-only: [merge_requests]
+ only: 
+ - [merge_requests]
   interruptible: true
   stage: deploy
   dependencies:
