--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -69,7 +69,7 @@ lintDebug:
   script:
     - ./gradlew -Pci --console=plain :app:lintDebug -PbuildDir=lint
   only: 
-  - [merge_requests]  
+  - merge_requests  
 
 # Make Project
 assembleDebug:
@@ -83,7 +83,7 @@ assembleDebug:
       - app/build/outputs/
       - req.json
   only: 
-  - [merge_requests]  
+  - merge_requests  
 
 # Run all tests, if any fails, interrupt the pipeline(fail it)
 debugTests:
@@ -92,7 +92,7 @@ debugTests:
   script:
     - ./gradlew -Pci --console=plain :app:testDebug
   only: 
-  - [merge_requests]  
+  - merge_requests  
 
 # Deployment to appetize.io, go through readme for more info
 deploy:
@@ -103,4 +103,4 @@ deploy:
   script:
     - 'curl -s -X POST -H "Content-Type: application/json" -d @req.json https://$APPETIZE_API@api.appetize.io/v1/apps/$APPETIZE_KEY > response.json'
   only: 
-  - [merge_requests]  
+  - merge_requests  
