--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ android:
 before_install:
   - yes | sdkmanager "platforms;android-29"
 
+  - chmod +x ./gradlew
+  
 jobs:
   include:
      - stage: lint
